# calus-bot

./: Cargo.toml
.circleci/: config.yml
bungie-api/: README.md
bungie-api/docs/: AppApi.md  ApplicationsApiUsage.md  ApplicationsApplication.md  ApplicationsApplicationDeveloper.md  ApplicationsDatapoint.md  ApplicationsSeries.md  CommonModelsCoreSetting.md  CommonModelsCoreSettingsConfiguration.md  CommonModelsCoreSystem.md  CommonModelsDestiny2CoreSettings.md  CommunityCommunityLiveStatus.md  CommunityContentApi.md  ComponentsComponentResponse.md  ConfigGroupTheme.md  ConfigUserTheme.md  ContentApi.md  ContentCommentSummary.md  ContentContentItemPublicContract.md  ContentContentRepresentation.md  ContentModelsContentPreview.md  ContentModelsContentTypeDefaultValue.md  ContentModelsContentTypeDescription.md  ContentModelsContentTypeProperty.md  ContentModelsContentTypePropertySection.md  ContentModelsTagMetadataDefinition.md  ContentModelsTagMetadataItem.md  DatesDateRange.md  DefaultApi.md  Destiny2Api.md  DestinyActivitiesDestinyPublicActivityStatus.md  DestinyAdvancedAwaAuthorizationResult.md  DestinyAdvancedAwaInitializeResponse.md  DestinyAdvancedAwaPermissionRequested.md  DestinyAdvancedAwaUserResponse.md  DestinyArtifactsDestinyArtifactCharacterScoped.md  DestinyArtifactsDestinyArtifactProfileScoped.md  DestinyArtifactsDestinyArtifactTier.md  DestinyArtifactsDestinyArtifactTierItem.md  DestinyBaseItemComponentSetOfint32.md  DestinyBaseItemComponentSetOfint64.md  (+598 more)
bungie-api/src/apis/: _api.rs  app_api.rs  client.rs  community_content_api.rs  configuration.rs  (+10 more)
cacophany/: Cargo.toml
cacophany/src/: cache.rs  consts.rs  error.rs  lib.rs  permission.rs  prelude.rs
cacophany/src/discord/: context.rs  error.rs  event_handler.rs  mod.rs
cacophany/src/gateway/: client.rs  mod.rs
cacophany/src/http/: mod.rs  ratelimit.rs
cacophany/src/models/: account.rs  audit_log.rs  mod.rs
cacophany/src/models/gateway/: activity.rs  bot.rs  hello.rs  identify.rs  mod.rs  resume.rs  session_start_limit.rs  update_status.rs  voice_state_update.rs
cacophany/src/models/guild/: audit_log.rs  ban.rs  guild_id.rs  integration.rs  member.rs  members.rs  mod.rs  request_member.rs  role.rs
cacophany/src/models/user/: mod.rs  status.rs
cacophany/src/util/: duration.rs  message_ext.rs  mod.rs  url.rs  value_ext.rs
src/: endpoint.rs  main.rs
(+747 files in other folders)
